--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h3 data-bind="text: current_cat_level"></h3>
         <div id="cat-count" data-bind="text:clickCount"></div>
         <img id="cat-img" data-bind="click:clicked, attr:{src:img}" src="" alt="cute cat">
+        <h3>Nicknames</h3>
+        <ul class="nicknames" data-bind="foreach: nicknames_list">
+          <li data-bind="text: $data"></li>
+        </ul>
 
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
