--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <ul id="cat-list"></ul>
     <div id="cat">
 
-        <h2 id="cat-name" data-bind="text:name"></h2>
-        <h3 data-bind="text: current_cat_level"></h3>
-        <div id="cat-count" data-bind="text:clickCount"></div>
-        <img id="cat-img" data-bind="click:clicked, attr:{src:img}" src="" alt="cute cat">
+        <h2 id="cat-name" data-bind="text: current_cat().name"></h2>
+        <h3 data-bind="text: current_cat().current_cat_level"></h3>
+        <div id="cat-count" data-bind="text: current_cat().clickCount"></div>
+        <img id="cat-img" data-bind="click: clicked, attr:{src: current_cat().img}" src="" alt="cute cat">
         <h3>Nicknames</h3>
-        <ul class="nicknames" data-bind="foreach: nicknames_list">
+        <ul class="nicknames" data-bind="foreach: current_cat().nicknames_list">
           <li data-bind="text: $data"></li>
         </ul>
 
