--- a/index.html
+++ b/index.html
@@ -3,6 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <title>Cat Clicker</title>
+    <style>
+    /* Inline the styles since it's small, save a request */
+    body {
+font-size: 24px;
+box-sizing: border-box;
+text-align: center;
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+margin: 0;
+border: 1em solid #333;
+background: #eaeaea;
+}
+
+ul {
+list-style: none;
+margin: 0;
+padding: 0;
+}
+
+#cat-list {
+list-style: none;
+margin: 0;
+padding: 1em;
+border-bottom: 1px solid #ccc;
+}
+
+#cat-list::before,
+#cat-name::before,
+#cat-level::before,
+#cat-count::before {
+display: block;
+color: #999;
+font-size: 0.5em;
+text-transform: uppercase;
+}
+
+#cat-list::before {
+content: "Click Buttons to Switch Cat";
+}
+#cat-name::before {
+font-size: 0.3em;
+content: "You're Clicking On";
+}
+#cat-level::before{
+font-size: 0.3em;
+content: "Cat Age";
+}
+#cat-count::before {
+font-size: 0.125em;
+content: "Click Count";
+}
+
+#cat-list li {
+display: inline-block;
+}
+
+#cat-list button {
+margin: 0.5em;
+padding: 0 2em;
+color: #fff;
+background-color: #26a69a;
+letter-spacing: .5px;
+-webkit-transition: background-csolor .2s ease-out;
+transition: background-color .2s ease-out;
+cursor: pointer;
+border: none;
+border-radius: 2px;
+display: inline-block;
+height: 4em;
+line-height:4em;
+text-transform: uppercase;
+vertical-align: middle;
+-webkit-tap-highlight-color: transparent;
+-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+-webkit-transition: .3s ease-out;
+transition: .3s ease-out;
+}
+
+#cat-list button:hover {
+opacity: 0.7;
+cursor: pointer;
+}
+
+#cat-name, #cat-level {
+display: inline-block;
+text-transform: uppercase;
+font-weight: 100;
+letter-spacing: 1px;
+color: #F44336;
+margin: 0.5em 0;
+padding: 0 0.5em;
+border-left: 1px solid #ccc;
+}
+
+#cat-level {
+border-right: 1px solid #ccc;
+}
+
+#cat-count {
+font-size: 4em;
+margin: 0.2em;
+}
+
+#cat-img {
+border-radius: 0.5em;
+cursor: pointer;
+transition: 0.1s ease;
+}
+
+#cat-img:hover {
+box-shadow: 3px 3px 5px #ccc;
+}
+
+.nicknames {
+margin: 1em;
+}
+
+.name-title {
+font-size: 0.9em;
+text-transform: uppercase;
+}
+
+.nicknames li {
+display: inline-block;
+border: 1px solid #555;
+padding: 0.2em 0.5em;
+color: #555;
+transform: skew(8deg);
+margin: 0 0.1em;
+}
+    </style>
 </head>
 <body>
     <ul id="cat-list" data-bind="foreach: cats_list">
@@ -16,11 +147,11 @@
     <div class="cat" data-bind="with: current_cat()">
 
         <h2 id="cat-name" data-bind="text: name"></h2>
-        <h3 data-bind="text: current_cat_level"></h3>
+        <h2 id="cat-level" data-bind="text: current_cat_level"></h3>
         <div id="cat-count" data-bind="text: clickCount"></div>
         <!-- Ascend to outer binding context aka the viewModel with $parent to use clicked function -->
         <img id="cat-img" data-bind="click: $parent.clicked, attr:{src: img}" src="" alt="cute cat">
-        <h3>Nicknames</h3>
+        <h3 class="name-title">Nicknames</h3>
         <ul class="nicknames" data-bind="foreach: nicknames_list">
           <li data-bind="text: $data"></li>
         </ul>
